Per the Web Advisory Group, modify spacing issues on Home page, and link collection titles to Digital Collection deep links.

--- a/app/assets/stylesheets/yale/yale.css
+++ b/app/assets/stylesheets/yale/yale.css
@@ -174,10 +174,6 @@ width: 100px;
 height: 170px;
 }
 
-.frontpage {
-padding-top:15px;
-}
-
 .frontpage dt {
 padding-top:15px;
 }
